--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0.140"
 sha3 = "0.10"
 thiserror = "2.0"
 tokio = { version = "1.45.1", features = ["full"] }
+toml = "0.8"
 tracing = "0.1"
 
 # Reth dependencies
