--- a/crates/node/Cargo.toml
+++ b/crates/node/Cargo.toml
@@ -15,6 +15,7 @@ tempo-chainspec.workspace = true
 reth-malachite.workspace = true
 reth-cli-commands.workspace = true
 reth-ethereum-engine-primitives.workspace = true
+reth-ethereum = { workspace = true, features = ["rpc"] }
 reth-ethereum-primitives.workspace = true
 reth-primitives-traits = { workspace = true, features = ["secp256k1", "rayon"] }
 reth-node-builder.workspace = true
@@ -22,6 +23,7 @@ reth-tracing.workspace = true
 reth-provider.workspace = true
 reth-transaction-pool.workspace = true
 reth-evm.workspace = true
+reth-rpc.workspace = true
 reth-rpc-eth-api.workspace = true
 reth-rpc-builder.workspace = true
 reth-node-api.workspace = true
@@ -33,8 +35,10 @@ reth-engine-local.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-rpc-types-eth.workspace = true
+alloy.workspace = true
 eyre.workspace = true
 clap.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 tempo-precompiles.workspace = true
